<!--
    Copyright (C) 2019-2020 The exTHmUI Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Theme Manager</string>

    <string name="skin_picker_button_apply">Apply Theme</string>

    <string name="skin_picker_sound_separator">Sound</string>
    <string name="skin_picker_wallpaper_separator">Background</string>
    <string name="skin_picker_app_separator">Application</string>
    <string name="skin_picker_preview_separator">Preview</string>

    <string name="skin_picker_switch_wallpaper">Wallpaper</string>
    <string name="skin_picker_switch_lockscreen">Lockscreen wallpaper</string>

    <string name="skin_picker_switch_ringtone">Ringtone</string>
    <string name="skin_picker_switch_alarm">Alarm</string>
    <string name="skin_picker_switch_notification">Notification</string>

    <string name="channel_apply_status">Theme apply ststus</string>
    <string name="skin_apply_status_running">Applying theme</string>
    <string name="skin_apply_status_ringtone">Applying ringtone</string>
    <string name="skin_apply_status_alarm">Applying alarm ringtone</string>
    <string name="skin_apply_status_notification">Applying notification sound</string>
    <string name="skin_apply_status_wallpaper">Applying wallpaper</string>
    <string name="skin_apply_status_lockscreen">Applying lockscreen wallpaper</string>
    <string name="skin_apply_status_overlay">Applying theme to %1$s</string>
    <string name="skin_apply_status_succeed">Theme %1$s applied successfully</string>
    <string name="skin_apply_status_failed">Failed to apply %1$s</string>

    <string name="dialog_remove_package_title">Uninstall theme</string>
    <string name="dialog_remove_package_text">Are you sure you want to uninstall %1$s ?</string>

</resources>
